# bck-ydjs09-ydjs_mcp_registry

./: .ai-agents-antigravity.bat  .ai-agents-copilot.bat  .ai-all-init.pl  .ai-cursor.bat  .ai-gemini.bat  .ai-kiro.bat  .gitignore  GEMINI.md  INSTR-low_level.md  INSTR-mcp.md  LICENSE  README.md  dev.bat  main.py  more_MCP_in_python.md  pyproject.toml  temp.geminilog
.agents/workflows/: edu01-document-partition.md  edu02-code-to-document.md  edu03-cross-check.md  edu04-best-practices-sync.md  edu10-tex-typeset.md  edu10-typeset-any.md  edu10-typeset-general.md
.cursor/: hooks.json  mcp.json
.cursor/rules/: analysis-research.mdc  analysis-search.mdc  build-node.mdc  build-python.mdc  code-doc-lang.mdc  code-doc-markup.mdc  code-doc-sql.mdc  code-documentation-markup.mdc  code-documentation-sql.mdc  code-documentation.mdc  edu-latex-exam.mdc  execute-node.mdc  execute-python.mdc  plan-research.mdc  plan-search.mdc
.cursor/skills/code-develop/: SKILL.md
.cursor/skills/code-document/: SKILL.md
.cursor/skills/code-migrate/: SKILL.md
.cursor/skills/code-spec/: SKILL.md
.cursor/skills/doc-spec/: SKILL.md
.cursor/skills/md-verify/: SKILL.md
.cursor/skills/server-test/: SKILL.md
.gemini/: settings.json
.gemini/hooks/: lint-check.js
.gemini/skills/code-develop/: SKILL.md
.gemini/skills/code-document/: SKILL.md
.gemini/skills/code-migrate/: SKILL.md
.gemini/skills/code-spec/: SKILL.md
.gemini/skills/doc-merge/: SKILL.md
.gemini/skills/doc-migrate/: SKILL.md
.gemini/skills/doc-spec/: SKILL.md
.gemini/skills/md-verify/: SKILL.md
.gemini/skills/server-test/: SKILL.md
.kiro/hooks/: git-status-before-prompt.kiro.hook
.kiro/settings/: mcp.json
.kiro/skills/code-develop/: SKILL.md
.kiro/skills/code-spec/: SKILL.md
.kiro/skills/doc-merge/: SKILL.md
.kiro/skills/doc-migrate/: SKILL.md
.kiro/skills/doc-spec/: SKILL.md
.kiro/steering/: analysis-research.md  analysis-search.md  build-node.md  build-python.md  code-doc-lang.md  code-doc-markup.md  code-doc-sql.md  code-documentation-markup.md  code-documentation-sql.md  code-documentation.md  edu-latex-exam.md  execute-node.md  execute-python.md  plan-research.md  plan-search.md
app/cli-mcp-registry/: pyproject.toml
app/cli-mcp-registry/src/cli_mcp_registry/: __init__.py  __main__.py
apps/app-api-feed/: pyproject.toml
apps/app-api-feed/src/app_api_feed/: __init__.py  __main__.py
docs/: ADVANTAGES.md  AI_AGENT-cursor.md  AI_AGENT-gemini.md  ARCHITECTURE.md  CUSTOM-npx.md  CUSTOM-uvx.md  ECOSYSTEM.md  EXAMPLES.md  GENERAL-MCP.md  Kiro.md  MCP-info.md  MCP_in_python.md  MISCELLENEOUS.md  REFACTOR.md  REFACTOR_MCP.md  USAGES.md  UV.md  _test-uml.tex  mcp.tex  preamble-code.tex  preamble-cs.tex  preamble-uml.tex  tikz-uml.sty
docs/ai-agent-guide/: CURSOR_GUIDE.md  GEMINI_GUIDE.md
docs/example/: README.md  structure.md  tech.md
docs/module/: 01-general.tex  02-mcp_distro.tex  03-mcp_by_individual.tex  04-mcp_configuration_for_usage.tex  04-npx_guide.tex  05-npx_guide.tex  05-uvx_guide.tex  06-uvx_guide.tex  07-config_guide.tex  99-temp  _test-uml.tex
lib/app-core/: pyproject.toml
lib/mcp-core/: pyproject.toml
server/app-api-feed/: pyproject.toml
server/app-api-feed/src/app_api_feed/: routers.py
server/mcp-calculator/: pyproject.toml
server/mcp-calculator/src/mcp_calculator/: __init__.py  __main__.py
server/mcp-sse-system-status/: README.md  pyproject.toml
server/mcp-sse-system-status/src/mcp_sse_system_status/: __init__.py  server.py
server/mcp-stdio-calculator/: pyproject.toml
servers/api-feed/: pyproject.toml
servers/api-feed/src/api_feed/: routers.py  server.py
servers/mcp-api-feed/: pyproject.toml
servers/mcp-api-feed/src/mcp_api_feed/: server.py
servers/mcp-calculator/: pyproject.toml
src/unified_mcp_app/: __main__.py
uv/: pipreqs.uv.py
(+28 files in other folders)
