[project]
name = "app-api-feed"
version = "0.1.0"
description = "FastAPI web app for feed functions"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "mcp-core==0.2.5",
]

[tool.uv.sources]
mcp-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
