[project]
name = "mcp-calculator"
version = "0.1.0"
description = "Standalone FastMCP server for calculator functions"
requires-python = ">=3.14"
dependencies = [
    "fastmcp==3.4.2",
    "mcp-core==0.2.5",
]

[tool.uv.sources]
mcp-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
