[project]
name = "mcp-sse-system-status"
version = "0.1.0"
description = "A custom MCP server demonstrating HTTP/SSE transport"
requires-python = ">=3.14"
dependencies = [
    "mcp==1.27.2",
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "starlette==1.3.0",
    "mcp-core==0.2.5",
]

[tool.uv.sources]
mcp-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
