[project]
name = "api-feed"
version = "0.1.0"
description = "FastAPI-MCP web app and server for feed functions"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.3",
    "fastapi-mcp==0.4.0",
    "uvicorn==0.49.0",
    "mcp-core",
]

[tool.uv.sources]
mcp-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
