[project]
name = "mcp-api-feed"
version = "0.1.0"
description = "FastMCP server for feed functions, wrapping the FastAPI backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi-mcp==0.4.0",
    "app-api-feed",
    "mcp==1.27.2",
]

[tool.uv.sources]
app-api-feed = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
